--- a/Stepmedia/Interview/Views/Home/Index.cshtml
+++ b/Stepmedia/Interview/Views/Home/Index.cshtml
@@ -16,4 +16,21 @@
         </div>
     </form>
     <div>@Model.Result</div>
+
+    <h2>Index</h2>
+
+    <h3>Transient Service</h3>
+    @ViewBag.message1
+    </br>
+    @ViewBag.message2
+
+    <h3>Scoped Service</h3>
+    @ViewBag.message3
+    </br>
+    @ViewBag.message4
+
+    <h3>Singleton Service</h3>
+    @ViewBag.message5
+    </br>
+    @ViewBag.message6
 </div>
